tests/sumo/errors/too_many_teleports/output.sumo
Loading net-file from 'net.net.xml' ... done (1ms).
Loading route-files incrementally from 'input_routes.rou.xml'
Loading done.
Simulation version v1_21_0+1557-fb9ec070d59 started with time: 0.00.
Simulation ended at time: 1909.00.
Reason: Too many teleports.
Performance:
 Duration: 0.13s
 Real time factor: 14914.1
 UPS: 1266632.812500
Vehicles:
 Inserted: 181
 Running: 177
 Waiting: 0
 Teleports: 6 (Yield: 1, Wrong Lane: 5)
